--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php":            ">=5.3.3",
-        "ext-SPL":        "*"
+        "php":     ">=5.3.3",
+        "ext-SPL": "*"
     },
     "require-dev": {
-        "phpunit/phpunit":               ">=4.8",
+        "phpunit/phpunit":               "<5.0",
         "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload": {
