PHPUnit 4.8 isn't supported on PHP7

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-SPL": "*"
     },
     "require-dev": {
-        "phpunit/phpunit":               "<5.0",
+        "phpunit/phpunit":               ">=4.8",
         "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload": {
