--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
 
     <filter>
         <whitelist>
-            <directory suffix=".php">src</directory>
+            <directory suffix=".php">lib</directory>
             <exclude>
                 <directory>tests</directory>
                 <directory>vendor</directory>
