--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-SPL": "*"
     },
     "require-dev": {
-        "phpunit/phpunit":               ">=4.8",
+        "phpunit/phpunit":               ">6.0",
         "codeclimate/php-test-reporter": "dev-master",
         "satooshi/php-coveralls":        "~1.0"
     },
@@ -28,5 +28,8 @@
         "psr-0": {
             "CrEOF\\Geo\\WKB\\Tests": "tests/"
         }
+    },
+    "scripts": {
+        "test": "phpunit -v"
     }
 }
